[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Lift.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Visuals/Background.png" type="Texture" id=4]
[ext_resource path="res://Scenes/SceneManager.gd" type="Script" id=6]
[ext_resource path="res://Sounds/Wiperman Loop.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Wiperman Startup.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/Wiperman Ending.wav" type="AudioStream" id=9]
[ext_resource path="res://Scenes/FloorObject.tscn" type="PackedScene" id=10]

[node name="Test" type="Node2D"]
script = ExtResource( 6 )
floorObject = ExtResource( 10 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 512, 301 )
scale = Vector2( 1.77083, 1.55729 )
texture = ExtResource( 4 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 504, 371 )

[node name="Lift" parent="." instance=ExtResource( 2 )]
position = Vector2( 289, -227 )

[node name="Startup" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 505, 361 )
stream = ExtResource( 8 )
bus = "In Game Music"

[node name="WipermanLoop" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 507, 361 )
stream = ExtResource( 7 )
bus = "In Game Music"

[node name="Ending" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 507, 364 )
stream = ExtResource( 9 )

[node name="FloorCreationTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Score Updater" type="Timer" parent="."]
wait_time = 0.2

[connection signal="finished" from="Startup" to="." method="_on_Startup_finished"]
[connection signal="finished" from="WipermanLoop" to="." method="_on_WipermanLoop_finished"]
[connection signal="timeout" from="FloorCreationTimer" to="." method="_on_FloorCreationTimer_timeout"]
[connection signal="timeout" from="Score Updater" to="." method="_on_Score_Updater_timeout"]
